It is hastening now.